# motion

./: CONTRIBUTING.md  Cargo.toml  README.md  Readme.md  flake.nix  release.toml
.github/workflows/: clippy.yml  release.yml
examples/event_loop_example/: Cargo.toml
examples/event_loop_example/src/: main.rs
examples/raqote_example/: Cargo.toml  shell.nix
examples/raqote_example/src/: main.rs
examples/sdl_example/: Cargo.toml  shell.nix
examples/sdl_example/src/: main.rs
motion-test/: Cargo.toml
src/: lib.rs
src/collision/: mod.rs  shape.rs
src/event_loop/: mod.rs
src/forces/: force.rs  gravity.rs  mod.rs  move.rs
src/formulas/: dot.rs  elastic_collision.rs  mod.rs  pitagoras.rs  pow.rs  sqrt.rs
src/vec/: mod.rs  vec_2d.rs
